<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#28A1D8"
        android:orientation="vertical">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/period_number"
                    android:textColor="#3E454D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/period"
                    android:textSize="14sp" />

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/memphis" />

                <TextView
                    android:textColor="#3E454D"
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/point"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:textColor="#3E454D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/time"
                    android:textSize="14sp" />

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/orleans" />

                <TextView
                    android:textColor="#3E454D"
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/point"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:textColor="#3E454D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:onClick="threePointForTeamA"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:id="@+id/team_a_score_3_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/threePoint" />

                <TextView
                    android:id="@+id/team_b_score_3_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:onClick="threePointForTeamB"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:onClick="twoPointForTeamA"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:id="@+id/team_a_score_2_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/twoPoint" />

                <TextView
                    android:id="@+id/team_b_score_2_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:onClick="twoPointForTeamB"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/freeThrowTeamA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:onClick="onePointForTeamA"
                    android:text="@string/plus"
                    android:textColor="@color/text_color"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:id="@+id/team_a_score_1_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/onePoint" />

                <TextView
                    android:id="@+id/team_b_score_1_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:onClick="onePointForTeamB"
                    android:text="@string/plus"
                    android:textColor="@color/text_color"
                    android:background="@drawable/custom_button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:onClick="foulCountForTeamA"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/foulPoint" />

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/point" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:onClick="foulCountForTeamB"
                    android:text="@string/plus"
                    android:textColor="#FeFeFe"
                    android:background="@drawable/custom_button"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/start"
                android:textColor="@color/text_color"
                android:background="@drawable/custom_button"/>

            <ToggleButton
                android:id="@+id/togBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textOff="@string/pause"
                android:textOn="@string/resume"
                android:textColor="@color/text_color"
                android:background="@drawable/custom_button" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:background="@drawable/custom_button"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:onClick="resetGame"
            android:text="@string/reset"
            android:textColor="@color/text_color"
            android:background="@drawable/custom_button"/>

    </LinearLayout>
</ScrollView>